src/style/styles.less
/* ... */
#leftpanel {
	position: fixed;
	left: 0;
	bottom: 100px;
	z-index: 3;
	pointer-events: none;
}

#queue .vignette,
#leftpanel .ability-slot,
#leftpanel .progressbar,
#rightpanel .panel-control,
#rightpanel .progressbar,
#bottompanel > * {
	pointer-events: auto;
}

.button:not(.togglescore) {
	position: relative;
	background-size: 100% 100%;
	cursor: pointer;
	height: 80px;
	width: 80px;
	overflow: hidden;

	&:before {
		content: '';
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		height: 80px;
		width: 80px;
		background-size: 100% 100%;
		background-image: url('~assets/interface/frame.png');
	}

	&.disabled {
		opacity: 0.5;
	}

	&.hidden {
		display: none;
	}
	&.noclick:hover {
		opacity: 0.5;
	}

	&.upgradeIcon {
		background-image: url('~assets/icons/upgrade.svg') !important;
	}

	&.upgradeTransition {
		transition: background-image 0.5s linear !important;
	}

	&.nextIcon {
		background-image: url('~assets/icons/next.svg') !important;
	}
	&.cancelIcon {
		background-image: url('~assets/icons/cancel.svg') !important;
	}

	&.upgraded.noclick:hover:before {
		opacity: 1;
	}

	&.upgraded:before {
		background-image: url('~assets/interface/frame_upgrade.png');
	}

	&.disabled {
		cursor: not-allowed !important;

		&.ability {
			cursor: help !important;
		}
	}
}

#fullscreen {
	cursor: pointer;
	position: fixed;
	width: 100px;
	text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
	top: 0;
	right: 0;
	z-index: 100;

	div {
		display: block;
		width: 100px;
		height: 100px;
		background-color: rgba(0, 0, 0, 0.55);
		background-image: url('~assets/interface/frame.png'), url('~assets/icons/fullscreen.svg');
		background-repeat: no-repeat;
		background-size: cover;
		margin-bottom: 3px;
	}

	&.fullscreenMode div {
		background-image: url('~assets/interface/frame.png'), url('~assets/icons/contract.svg');
	}
}

.button#fullscreen {
	position: inherit;
	width: 80px;
	height: 80px;
	opacity: 0.8;
	background-color: transparent;
	z-index: inherit;

	div {
		width: 100%;
		height: 100%;
	}
}
.button#skip {
	background-image: url('~assets/autoload/phaser/interface/skip.svg');
}

.button#delay {
	background-image: url('~assets/icons/delay.svg');
}

.button#flee {
	background-image: url('~assets/icons/flee.svg');
}

.button#exit {
	background-image: url('~assets/icons/exit.svg');
}

.p0.player-text.bright {
	color: #f55;
}

.p1.player-text.bright {
	color: #88f;
}

.p2.player-text.bright {
	color: #fa5;
}

.p3.player-text.bright {
	color: #5f5;
}

.p0.player-text {
	color: rgba(255, 0, 0, 1);
}

.p1.player-text {
	color: rgba(0, 0, 255, 1);
}

.p2.player-text {
	color: rgba(255, 172, 0, 1);
}

.p3.player-text {
	color: rgba(0, 255, 0, 1);
}

#playerbutton {
	cursor: pointer;
	position: relative;
	right: 0;
	z-index: 2;
	transition: opacity 0.5s ease;
	background-image: none;
}

#playerbutton .playerinfo,
#playerbutton .hexinfo {
	color: white;
	display: block;
	font-size: 12px;
	font-weight: bold;
	height: 100px;
	width: 90px;
	margin: 0;
	padding: 0 5px;
	text-align: right;
	text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
	top: 0;
	background-color: rgba(0, 0, 0, 0.55);
}

#playerbutton .hexinfo {
	text-align: center;
}

#playerbutton .vignette {
	height: 100px;
	width: 100px;
	padding: 0;
	margin: 0;
}

.playerinfo p,
.hexinfo p {
	margin: 4px;
}

.playerinfo .name,
.hexinfo .name {
	font-size: 15px;
}

.hexinfo .name {
	padding-top: 18px;
	padding-bottom: 2px;
	margin: inherit 4px 0px 12px;
	border-bottom: 1px solid #555;
}

.hexinfo .vignette.hex .frame {
	background-image: url('~assets/interface/frame.png');
}

.alert {
	color: red;
}

.turntime-warning {
	animation: glowingtext 450ms ease-in-out infinite alternate;
}

#leftpanel .button {
	background-color: rgba(0, 0, 0, 0.55);
	transition: transform 0.5s;
	transform: translateX(0);

	&:hover {
		transform: translateX(0);
	}

	&.slideIn {
		transform: translateX(0);
	}

	&.disabled,
	&.noclick {
		transform: translateX(-50%);

		&:hover {
			transform: translateX(0);
		}
	}
}

#rightpanel .button:not(.togglescore) {
	background-color: rgba(0, 0, 0, 0.55);
	transition: transform 0.5s;
	transform: translateX(0);

	&:hover {
		transform: translateX(0);
	}

	&.slideIn {
		transform: translateX(0);
	}

	&.disabled,
	&.noclick {
		transform: translateX(50%);

		&:hover {
			transform: translateX(0);
		}
	}
}

.card.disabled a.name {
	cursor: not-allowed;
}
// Card anchor refactor
div.section.info {
	position: relative;

	div.set-type-parent {
		float: left;
		margin-left: 5%;
		font-size: 0px;
	}

	div.creature-meta {
		font-size: 21px;

		&.star {
			vertical-align: baseline;
		}
		&.type {
			display: inline-block;
			font-size: 21px;
		}

		&.set {
			display: inline-block;
			font-size: 21px;
		}
		&.hexes {
			float: right;
			margin-right: 5%;
			letter-spacing: -3px;
		}

		&.name {
			display: inline-block;
			color: white;
			text-shadow: 2px 2px black;
			text-decoration: none;
			cursor: pointer;
			left: 50%;
			transform: translate(-50%, -50%);
		}
	}
}

/*-------------------Dash-------------------*/
#dash {
	background: rgba(0, 0, 0, 0.85);
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	z-index: 4;
	transition: top 250ms;
}

#dash #tooltip {
	display: block;
	position: absolute;
	top: -100px;
	left: 0;
	right: 100px;
	height: 100px;
	color: white;
	text-align: center;
}

#dash #tooltip.active {
	top: 0;
}

#dash #creatureraster {
	height: 700px;
	width: 700px;
	display: inline-flex;
	flex-wrap: wrap;
	top: 0;
	bottom: 0;
	padding: 20px;
}

#dash #return {
	top: 0;
	right: 0 !important;
	position: absolute;
	height: 100px;
	width: 100px;
}

.close-button {
	border: none;
	height: 100%;
	width: 100%;
	background: url('~assets/icons/close.svg');
	transition: all 0.5s;
	cursor: pointer;

	&::before {
		content: '';
		width: 100%;
		height: 100%;
		background-image: none;
	}

	&:hover {
		transform: rotate(-90deg);
	}
}
/* ... */

